Fix -Wformat warnings in WebLoaderStrategy https://bugs.webkit.org/show_bug.cgi?id=162553

Unreviewed

Two of the format arguments are swapped. Fix them.

* WebProcess/Network/WebLoaderStrategy.cpp:
(WebKit::WebLoaderStrategy::scheduleLoad):

Canonical link: https://commits.webkit.org/180494@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@206371 268f45cc-cd09-0410-ab3c-d52691b4dbfc