Source/WebKit2/NetworkProcess/Downloads/Download.cpp
@@ -122,7 +122,7 @@ void Download::didReceiveAuthenticationChallenge(const AuthenticationChallenge& 
 
 void Download::didReceiveResponse(const ResourceResponse& response)
 {
-    RELEASE_LOG_IF_ALLOWED("didReceiveResponse: Created (id = %llu)", downloadID().downloadID());
+    RELEASE_LOG_IF_ALLOWED("didReceiveResponse: Created (id = %" PRIu64 ")", downloadID().downloadID());
 
     send(Messages::DownloadProxy::DidReceiveResponse(response));
 }
@@ -130,7 +130,7 @@ void Download::didReceiveResponse(const ResourceResponse& response)
 void Download::didReceiveData(uint64_t length)
 {
     if (!m_hasReceivedData) {
-        RELEASE_LOG_IF_ALLOWED("didReceiveData: Started receiving data (id = %llu)", downloadID().downloadID());
+        RELEASE_LOG_IF_ALLOWED("didReceiveData: Started receiving data (id = %" PRIu64 ")", downloadID().downloadID());
         m_hasReceivedData = true;
     }
 
@@ -167,7 +167,7 @@ void Download::didCreateDestination(const String& path)
 
 void Download::didFinish()
 {
-    RELEASE_LOG_IF_ALLOWED("didFinish: (id = %llu)", downloadID().downloadID());
+    RELEASE_LOG_IF_ALLOWED("didFinish: (id = %" PRIu64 ")", downloadID().downloadID());
 
     platformDidFinish();
 
@@ -183,7 +183,7 @@ void Download::didFinish()
 
 void Download::didFail(const ResourceError& error, const IPC::DataReference& resumeData)
 {
-    RELEASE_LOG_IF_ALLOWED("didFail: (id = %llu, isTimeout = %d, isCancellation = %d, errCode = %d)",
+    RELEASE_LOG_IF_ALLOWED("didFail: (id = %" PRIu64 ", isTimeout = %d, isCancellation = %d, errCode = %d)",
         downloadID().downloadID(), error.isTimeout(), error.isCancellation(), error.errorCode());
 
     send(Messages::DownloadProxy::DidFail(error, resumeData));
@@ -197,7 +197,7 @@ void Download::didFail(const ResourceError& error, const IPC::DataReference& res
 
 void Download::didCancel(const IPC::DataReference& resumeData)
 {
-    RELEASE_LOG_IF_ALLOWED("didCancel: (id = %llu)", downloadID().downloadID());
+    RELEASE_LOG_IF_ALLOWED("didCancel: (id = %" PRIu64 ")", downloadID().downloadID());
 
     send(Messages::DownloadProxy::DidCancel(resumeData));
 
